z-index fix for attachments viewer

--- a/public/src/module/_attachments.scss
+++ b/public/src/module/_attachments.scss
@@ -203,7 +203,7 @@ $attachment-viewer-toolbar-height: 50px;
 	width: 100%;
 	top: 0;
 	left: 0;
-	z-index: 99;
+	z-index: 100;
 }
 
 .av-close {
